--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
-CONDITION_ID="0xB84FF1DA4D1d290c608F150F891f459Ba3cd0fFb"
-STRATEGY="amm"
-CONFIG="./config/amm.json"
+MARKET_ID="518269"
+STRATEGY="front_run"
+CONFIG="./config/front_run.json"
